Loads of changes based on feedback - logged in Trello

--- a/functions/test-db/json2/scvo/partials/menu-running-business-planning.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-running-business-planning.hbs
@@ -1,5 +1,5 @@
-<nav class="menu-sidebar" id="setting-up-a-charity-menu">
-    {{#each context.menus.setting-up-a-charity}}
+<nav class="menu-sidebar" id="business-planning-menu">
+    {{#each context.menus.business-planning}}
     <a class="mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
     {{#each this.children}}
     <a class="mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
