--- a/functions/test-db/json2/scvo/templates/event.hbs
+++ b/functions/test-db/json2/scvo/templates/event.hbs
@@ -26,14 +26,14 @@
             {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                    {{#if supplimentaryResponses.related_events.hits.hits}}
+                    {{#compare supplimentaryResponses.related_events.hits.total ">" 0}}
                     <h2 class="author">Similar events</h2>
                     <ul class="supplimentary-list">
                         {{#each supplimentaryResponses.related_events.hits.hits}}
                         {{{_source.rendered.list}}}
                         {{/each}}
                     </ul>
-                    {{/if}}
+                    {{/compare}}
                 </div>
             </div>
         </div>
