--- a/functions/test-db/json2/scvo/templates/page-running-funding-guide.hbs
+++ b/functions/test-db/json2/scvo/templates/page-running-funding-guide.hbs
@@ -8,7 +8,11 @@
                     {{else}}
                     <h1 class="header-text">
                         <span class="header-text-banner">
+                            {{#if primaryResponse.hits.hits.[0]}}
                             {{{primaryResponse.hits.hits.[0]._source.title}}}
+                            {{else}}
+                            404: Not found
+                            {{/if}}
                         </span>
                     </h1>
                     {{/if}}
@@ -21,12 +25,29 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content page-content">
-                    {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
+                    {{#with primaryResponse.hits.hits.[0]._source}}
+                    {{{rendered.full}}}
+                    {{/with}}
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 content sidebar page-sidebar">
-                    {{> menu_funding_guide}}
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar page-sidebar">
+                    {{> menu_running_funding_guide}}
                 </div>
+                {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related post-related">
+                    <h3 class="blogs">Related posts</h3>
+                    <div class="mdc-layout-grid">
+                        <div class="mdc-layout-grid__inner">
+                            {{#each supplimentaryResponses.related_posts.hits.hits}}
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+                                {{{_source.rendered.sidebar_mini}}}
+                            </div>
+                            {{/each}}
+                        </div>
+                    </div>
+                </div>
+                {{/compare}}
             </div>
         </div>
     </div>
+    {{> footer_join_our_hub}}
 </div>
