--- a/functions/test-db/json2/scvo/templates/page-running.hbs
+++ b/functions/test-db/json2/scvo/templates/page-running.hbs
@@ -33,13 +33,13 @@
                     {{> menu_running}}
                 </div>
                 {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related post-related">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
                     <h3 class="blogs">Related posts</h3>
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
                             {{#each supplimentaryResponses.related_posts.hits.hits}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                                {{{_source.rendered.sidebar_mini}}}
+                                {{{_source.rendered.gist}}}
                             </div>
                             {{/each}}
                         </div>
