--- a/functions/test-db/json2/scvo/partials/menu-running-business.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-running-business.hbs
@@ -1,5 +1,5 @@
-<nav class="menu-sidebar" id="setting-up-menu">
-    {{#each context.menus.setting-up}}
+<nav class="menu-sidebar" id="running-business-menu">
+    {{#each context.menus.running-business}}
     <a class="menu-level-1 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
     {{#each this.children}}
     <a class="menu-level-2 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
