--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -716,9 +716,12 @@ a:hover {
         font-weight: 400;
     }
 }
-.page-related,
 .post-related {
     border-top: 1px solid rgba(0,0,0,.2);
+}
+.page-related,
+.post-related {
+    margin-bottom: $spacing-unit*2;
     h3 {
         margin-bottom: $spacing-unit;
     }
