--- a/functions/test-db/json2/scvo/partials/menu-running.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-running.hbs
@@ -1,8 +1,14 @@
-<nav class="menu-sidebar" id="running-your-organisation-menu">
-    {{#each context.menus.running-your-organisation}}
-    <a class="mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
+<nav class="menu-sidebar" id="running-menu">
+    {{#each context.menus.running}}
+    <a class="menu-level-1 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
     {{#each this.children}}
-    <a class="mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
+    <a class="menu-level-2 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
+    {{#each this.children}}
+    <a class="menu-level-3 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
+    {{#each this.children}}
+    <a class="menu-level-4 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
+    {{/each}}
+    {{/each}}
     {{/each}}
     {{/each}}
 </nav>
