--- a/functions/test-db/json2/scvo/templates/page-running-business-planning.hbs
+++ b/functions/test-db/json2/scvo/templates/page-running-business-planning.hbs
@@ -30,7 +30,7 @@
                     {{/with}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar page-sidebar">
-                    {{> menu_running_business_planning}}
+                    {{> menu_running_business}}
                 </div>
                 {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
