Finished menus for running org

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -711,6 +711,7 @@ a:hover {
 .page-related .gist,
 .post-related .gist {
     box-shadow: none;
+    -webkit-box-shadow: none;
     .post-info-closing-date,
     .post-info-published {
         font-weight: 400;
@@ -926,6 +927,7 @@ a:hover {
             color: white;
             border: none;
             box-shadow: none;
+            -webkit-box-shadow: none;
             cursor: pointer;
             visibility: hidden;
             width: 0;
@@ -1614,11 +1616,24 @@ h1.support-sector {
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     -webkit-box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     .mdc-button {
+        padding: 0 $spacing-unit;
+    }
+    .menu-level-2 {
+        padding-left: $spacing-unit*1.5;
+    }
+    .menu-level-3 {
+        padding-left: $spacing-unit*2;
+    }
+    .menu-level-4 {
+        padding-left: $spacing-unit*2.5;
+    }
+    .mdc-button {
         border: none;
         text-align: left;
         margin-bottom: 0;
         border-radius: 0;
         box-shadow: none;
+        -webkit-box-shadow: none;
     }
     .mdc-button:first-child {
         border-radius: 2px 2px 0 0;
