--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1553,7 +1553,7 @@ h1.support-sector {
             padding-left: $spacing-unit*1.4;
         }
         li::before {
-            content: "\25A0";
+            content: "\25CF";
             font-size: 1rem;
             margin-left: -$spacing-unit*1.4;
             padding-right: 0.95rem;
