Fixed human rights menu

--- a/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
@@ -101,7 +101,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-10-phone">
             <h3>
-                Back to Basics
+                Back the Basics
             </h3>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-12-phone">
