--- a/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
+++ b/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
@@ -21,16 +21,16 @@ body {
     margin: 0;
     font-family: "Rubik";
 }
-.mdc-temporary-drawer__header-content,
+.mdc-drawer__header-content,
 header.mdc-toolbar,
 main {
     color: $brand-colour;
     background-color: white;
 }
-.mdc-temporary-drawer__header-content img.brand-logo-mobile {
+.mdc-drawer__header-content img.brand-logo-mobile {
     max-width: 100%;
 }
-.mdc-temporary-drawer__header:before {
+.mdc-drawer__header:before {
     padding-top: 34%;
 }
 .mdc-list-item {
