--- a/functions/test-db/json2/scvo/templates/page-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/page-policy.hbs
@@ -31,7 +31,7 @@
                 {{{supplimentaryResponses.latest_briefings.hits.hits.[2]._source.rendered.gist}}}
                 {{/if}}
 
-                <a href="/policy-research/briefings" class="mdc-button v-margin">Read more</a>
+                <a href="/policy-research/briefings" class="v-margin">More briefings</a>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
                 <h3>Consultation responses</h3>
@@ -42,9 +42,9 @@
                 {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[2]._source.rendered.gist}}}
                 {{/if}}
 
-                <a href="/policy-research/consultation-responses" class="mdc-button v-margin">Read more</a>
+                <a href="/policy-research/consultation-responses" class="v-margin">More consultation responses</a>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone no-border">
                 <h3>Research</h3>
 
                 {{#if supplimentaryResponses.latest_research.hits.hits}}
@@ -53,7 +53,7 @@
                 {{{supplimentaryResponses.latest_research.hits.hits.[2]._source.rendered.gist}}}
                 {{/if}}
 
-                <a href="/policy-research/research" class="mdc-button v-margin">Read more</a>
+                <a href="/policy-research/research" class="v-margin">More research</a>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
                 <div class="mdc-card">
