--- a/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
@@ -23,6 +23,7 @@
     <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#00838f">
     <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
     <style type="text/css">
     {{{this.css}}}
     </style>
@@ -51,31 +52,29 @@
                                 <!-- <a class="mdc-tab" href="/signatories">Signatories</a> -->
                             </nav>
                             <button class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" id="menu_button" aria-label="Menu" alt="Menu">
-                                <span class="fa fa-2x fa-bars" aria-hidden="true"></span>
+                                <span class="fal fa-2x fa-bars" aria-hidden="true"></span>
                             </button>
                         </section>
                     </div>
                 </div>
             </header>
 
-            <aside class="mdc-temporary-drawer" id="menu_draw" dir="rtl">
-                <nav class="mdc-temporary-drawer__drawer">
-                    <header class="mdc-temporary-drawer__header">
-                        <div class="mdc-temporary-drawer__header-content mdc-theme--text-primary-on-primary">
-                            <img src="https://storage.googleapis.com/human-rights-declaration/sdhr-logo.png" class="brand-logo-mobile" />
-                        </div>
-                    </header>
-                    <nav class="mdc-temporary-drawer__content mdc-list-group">
-                        <div id="icon-with-text-demo" class="mdc-list">
-                            <a class="mdc-list-item" href="/" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">Home</a>
-                            <a class="mdc-list-item" href="/the-declaration" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">The Declaration</a>
-                            <a class="mdc-list-item" href="/why-sign" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">Why sign?</a>
-                            <a class="mdc-list-item" href="/sign-up" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">Sign up</a>
-                            <a class="mdc-list-item" href="/faq" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">FAQ</a>
-                            <!-- <a class="mdc-list-item" href="/signatories" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Signatories</a> -->
-                        </div>
-                    </nav>
+            <aside class="mdc-drawer mdc-drawer--temporary" id="menu_drawer" dir="rtl">
+              <nav class="mdc-drawer__drawer">
+                <header class="mdc-drawer__header">
+                  <div class="mdc-drawer__header-content">
+                      <img src="https://storage.googleapis.com/human-rights-declaration/sdhr-logo.png" class="brand-logo-mobile" />
+                  </div>
+                </header>
+                <nav id="icon-with-text-demo" class="mdc-drawer__content mdc-list">
+                    <a class="mdc-list-item" href="/" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">Home</a>
+                    <a class="mdc-list-item" href="/the-declaration" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">The Declaration</a>
+                    <a class="mdc-list-item" href="/why-sign" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">Why sign?</a>
+                    <a class="mdc-list-item" href="/sign-up" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">Sign up</a>
+                    <a class="mdc-list-item" href="/faq" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">FAQ</a>
+                    <!-- <a class="mdc-list-item" href="/signatories" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Signatories</a> -->
                 </nav>
+              </nav>
             </aside>
 
             <main>
