--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -664,10 +664,24 @@ a:hover {
 .home,
 .policy-research {
     .latest-content {
-        padding: $spacing-unit/2 0 $spacing-unit*2;
+        padding: $spacing-unit*2 0;
+        h2 a,
+        .scvo-cms-post,
+        .tfn-news-post {
+            padding-right: $spacing-unit;
+            border-right: 1px solid rgba(0,0,0,.2);
+        }
+        .no-border .scvo-cms-post {
+            border: none;
+        }
+        .mdc-layout-grid__cell--span-10-desktop {
+            padding-left: $spacing-unit/2;
+        }
         h2 {
+            margin: 0;
             font-size: 1.8rem;
             a {
+                padding: $spacing-unit 0;
                 font-size: 1.1rem;
                 display: block;
             }
@@ -675,7 +689,7 @@ a:hover {
     }
 }
 .gist {
-    margin-top: $spacing-unit*1.5;
+    padding-top: $spacing-unit;
     .mdc-card__subtitle {
         margin-top: $spacing-unit/4;
     }
@@ -1335,7 +1349,7 @@ h1.mdc-typography--title {
         }
     }
     .mdc-card__primary {
-        margin-bottom: $spacing-unit;
+        // margin-bottom: $spacing-unit;
         .mdc-card__title {
             padding-bottom: 0;
             a {
@@ -1362,6 +1376,11 @@ h1.mdc-typography--title {
     .goodmoves .mdc-card__media {
         background-color: #58a934 !important;
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/goodmoves.png');
+    }
+    .cjs .mdc-card__media {
+        height: 105px;
+        background-color: #fff !important;
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cjs.png');
     }
     .funding-scotland .mdc-card__media {
         background-color: #8AC645 !important;
