--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -110,23 +110,8 @@
                     <div class="container-fluid">
                         <div class="mdc-layout-grid">
                             <div class="mdc-layout-grid__inner">
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-7-desktop ">
-                                    <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
-                                        <img src="/assets/images/scvo-logo.png" />
-                                    </a>
-                                    <p>The <strong>Scottish Council for Voluntary Organisations</strong> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</p>
-                                </div>
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
-                                    &nbsp;
-                                </div>
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-2-desktop">
-                                    <ul class="mdc-list">
-                                        {{#each menus.footer}}
-                                        <li class="mdc-list-item"><a href="{{path}}">{{{label}}}</a></li>
-                                        {{/each}}
-                                    </ul>
-                                </div>
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-2-desktop">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                                    <h3>Contact</h3>
                                     <ul class="fa-ul">
                                         <li>
                                             <span class="fa-li"><span class="fas fa-envelope-square"></span></span>
@@ -136,6 +121,23 @@
                                             <span class="fa-li"><span class="fas fa-phone-square"></span></span>
                                             <a href="tel:+441314748000">0131 474 8000</a>
                                         </li>
+                                    </ul>
+                                    <p>
+                                        Information service helpline
+                                    </p>
+                                    <ul class="fa-ul">
+                                        <li>
+                                            <span class="fa-li"><span class="fas fa-phone-square"></span></span>
+                                            <a href="tel:+448001690022">0800 169 0022</a>
+                                        </li>
+                                    </ul>
+                                    <ul class="mdc-list">
+                                        <li class="mdc-list-item"><a href="/services/membership">Become a member</a></li>
+                                    </ul>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                                    <h3>Social</h3>
+                                    <ul class="fa-ul">
                                         <li>
                                             <span class="fa-li"><span class="fab fa-twitter-square"></span></span>
                                             <a href="https://twitter.com/scvotweet">Twitter</a>
@@ -144,7 +146,33 @@
                                             <span class="fa-li"><span class="fab fa-facebook-square"></span></span>
                                             <a href="https://www.facebook.com/SCVO1939">Facebook</a>
                                         </li>
+                                        <li>
+                                            <span class="fa-li"><span class="fas fa-heart"></span></span>
+                                            <a href="https://goodhq.org/scvo">Good HQ</a>
+                                        </li>
+                                        <li>
+                                            <span class="fa-li"><span class="fab fa-youtube"></span></span>
+                                            <a href="https://www.youtube.com/user/SCVOtv">YouTube</a>
+                                        </li>
+                                        <li>
+                                            <span class="fa-li"><span class="fab fa-linkedin"></span></span>
+                                            <a href="https://www.linkedin.com/company/scvo">LinkedIn</a>
+                                        </li>
                                     </ul>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                                    <h3>Help with our site</h3>
+                                    <ul class="mdc-list">
+                                        {{#each menus.footer}}
+                                        <li class="mdc-list-item"><a href="{{path}}">{{{label}}}</a></li>
+                                        {{/each}}
+                                    </ul>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                                    <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
+                                        <img src="/assets/images/scvo-logo.png" />
+                                    </a>
+                                    <p>The <strong>Scottish Council for Voluntary Organisations</strong> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</p>
                                 </div>
                             </div>
                         </div>
