--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -203,6 +203,9 @@ primary-dark: #251032
             color: map-get($themeSelected, 'primary') !important;
         }
     }
+    footer h3 {
+        border-color: map-get($themeFooter, 'primary-light');
+    }
 
     // .mdc-button:after,
     // .mdc-button:before,
@@ -226,6 +229,7 @@ primary-dark: #251032
     .mdc-theme--secondary-dark {
         color: map-get($themeSelected, 'secondary-dark');
     }
+    .support.funding .mdc-card__primary,
     .support.support-organisation .mdc-card__primary,
     .section-projects .mdc-card__media,
     .section-campaigns .mdc-card__media,
@@ -665,15 +669,6 @@ a:hover {
 .policy-research {
     .latest-content {
         padding: $spacing-unit*2 0;
-        h2 a,
-        .scvo-cms-post,
-        .tfn-news-post {
-            padding-right: $spacing-unit;
-            border-right: 1px solid rgba(0,0,0,.2);
-        }
-        .no-border .scvo-cms-post {
-            border: none;
-        }
         .mdc-layout-grid__cell--span-10-desktop {
             padding-left: $spacing-unit/2;
         }
@@ -685,6 +680,20 @@ a:hover {
                 font-size: 1.1rem;
                 display: block;
             }
+        }
+    }
+}
+.home {
+    .latest-content {
+        h2 a,
+        .scvo-cms-post,
+        .tfn-news-post {
+            padding-right: $spacing-unit;
+            border-right: 1px solid rgba(0,0,0,.2);
+        }
+        .no-border h2 a,
+        .no-border .scvo-cms-post {
+            border: none;
         }
     }
 }
@@ -1255,6 +1264,7 @@ a:hover {
 .scvo-cms-page-20090 .page-info,
 .scvo-cms-page-20035 .page-info,
 .scvo-cms-page-20034 .page-info,
+.scvo-cms-page-20005 .page-info,
 .blogs .page-sidebar .page-info,
 .policy-research.briefings-consultation-responses .mdc-card__actions,
 .policy-research.research .mdc-card__actions,
@@ -1327,6 +1337,9 @@ h1.mdc-typography--title {
 .mdc-card__primary .mdc-card__title--large {
     padding-top: 0;
 }
+.support.funding .mdc-card {
+    margin: $spacing-unit 0;
+}
 .support {
     .mdc-card__media {
         height: 80px;
@@ -1352,6 +1365,7 @@ h1.mdc-typography--title {
         // margin-bottom: $spacing-unit;
         .mdc-card__title {
             padding-bottom: 0;
+            color: white;
             a {
                 display: block;
                 width: 100%;
@@ -2026,6 +2040,11 @@ footer {
     .footer-main {
         padding: $spacing-unit*2.5 0 $spacing-unit*2;
     }
+    h3 {
+        padding-bottom: $spacing-unit/2;
+        border-bottom-style: solid;
+        border-bottom-width: $spacing-unit/5;
+    }
     a {
         color: white;
         text-decoration: underline;
@@ -2060,6 +2079,12 @@ footer {
         li a:hover {
             text-decoration: underline;
         }
+    }
+    ul {
+        margin-bottom: $spacing-unit !important;
+    }
+    .mdc-layout-grid p {
+        margin-bottom: 0;
     }
     .mdc-list {
         padding: 0;
