--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -118,7 +118,7 @@
                         <a href="http://thirdforcenews.org.uk">Read more on TFN</a>
                     </h2>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-phone">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-phone no-border">
                     <h2>
                         Top third sector jobs
                     </h2>
@@ -133,3 +133,5 @@
         </div>
     </div>
 </section>
+
+{{> footer_join_our_hub}}
