--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -908,7 +908,7 @@ a:hover {
                     min-height: $nav-height;
                     height: $nav-height;
                     font-weight: 600;
-                    padding: 0 $spacing-unit*(3/4);
+                    padding: 0 $spacing-unit;
                     .mdc-tab--label {
                         line-height: $nav-height - 4px;
                         height: $nav-height - 4px;
