--- a/functions/test-db/json2/scvo/templates/search.hbs
+++ b/functions/test-db/json2/scvo/templates/search.hbs
@@ -1,46 +1,41 @@
-<div class="search">
+<div class="search v-margin">
     <div class="container-fluid">
-        <div class="v-margin">
-            <h1>Search SCVO</h1>
-            <form [searchroute]="'main_search'" data-auto-search="true">
-                <div class="mdc-textfield">
-                    <input type="text" class="mdc-textfield__input searchRoute" placeholder="Search keywords" value="{{params.query.q}}" name="q" id="main-q">
-                    <div class="mdc-textfield__bottom-line"></div>
-                </div>
-                <h2>Filter by</h2>
-                <div class="mdc-form-field">
-                    <!-- <label class="mdc-select__label" for="main-type">Filter by</label> -->
-                    <select class="mdc-select" role="listbox" id="main-type" name="type">
-                        <option value="" {{#unless params.query.type}}selected{{/unless}}>All content</option>
-                        <option value="scvo-cms-post" {{#compare params.query.type "===" "scvo-cms-post"}}selected{{/compare}}>Blog posts</option>
-                        <option value="scvo-cms-page" {{#compare params.query.type "===" "scvo-cms-page"}}selected{{/compare}}>Pages</option>
-                        <option value="scvo-event" {{#compare params.query.type "===" "scvo-event"}}selected{{/compare}}>Training &amp; events</option>
-                        <option value="goodmoves-legacy" {{#compare params.query.type "===" "goodmoves-legacy"}}selected{{/compare}}>Goodmoves jobs</option>
-                        <option value="scvo-member" {{#compare params.query.type "===" "scvo-member"}}selected{{/compare}}>SCVO member organisations</option>
-                        <option value="digital-charter-signatory" {{#compare params.query.type "===" "digital-charter-signatory"}}selected{{/compare}}>Digital Participation Charter signatories</option>
-                        <option value="funding-scotland-fund" {{#compare params.query.type "===" "funding-scotland-fund"}}selected{{/compare}}>Funding Scotland funds</option>
-                        <option value="goodhq-organisation" {{#compare params.query.type "===" "goodhq-organisation"}}selected{{/compare}}>Good HQ organisation profiles</option>
-                        <option value="scvo-document-evidence" {{#compare params.query.type "===" "scvo-document-evidence"}}selected{{/compare}}>Evidence Library documents</option>
-                        <option value="scvo-grant-charter" {{#compare params.query.type "===" "scvo-grant-charter"}}selected{{/compare}}>Digital funded projects</option>
-                    </select>
-                </div>
-                <button class="mdc-button mdc-button--raised" type="submit">
-                    Search
-                </button>
-            </form>
-        </div>
-
-        <div class="mdc-layout-grid equal-height">
+        <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                {{#each primaryResponse.hits.hits}}
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar">
+                    <h2>Search SCVO, Goodmoves, TFN, and more</h2>
+                    <form [searchroute]="'main_search'" data-auto-search="true">
+                        <input type="hidden" class="mdc-textfield__input searchRoute" placeholder="Search keywords" value="{{params.query.q}}" name="q" id="main-q">
+                        <!-- <h3>Filter</h3> -->
+                        <div class="mdc-form-field">
+                            <select class="mdc-select" role="listbox" id="main-type" name="type">
+                                <option value="" {{#unless params.query.type}}selected{{/unless}}>All content</option>
+                                <option value="scvo-cms-post" {{#compare params.query.type "===" "scvo-cms-post"}}selected{{/compare}}>Blog posts</option>
+                                <option value="scvo-grant-charter" {{#compare params.query.type "===" "scvo-grant-charter"}}selected{{/compare}}>Digital funded projects</option>
+                                <option value="digital-charter-signatory" {{#compare params.query.type "===" "digital-charter-signatory"}}selected{{/compare}}>Digital Participation Charter signatories</option>
+                                <option value="scvo-document-evidence" {{#compare params.query.type "===" "scvo-document-evidence"}}selected{{/compare}}>Evidence Library documents</option>
+                                <option value="funding-scotland-fund" {{#compare params.query.type "===" "funding-scotland-fund"}}selected{{/compare}}>Funding Scotland funds</option>
+                                <option value="goodhq-organisation" {{#compare params.query.type "===" "goodhq-organisation"}}selected{{/compare}}>Good HQ organisation profiles</option>
+                                <option value="goodmoves-legacy" {{#compare params.query.type "===" "goodmoves-legacy"}}selected{{/compare}}>Goodmoves jobs</option>
+                                <option value="scvo-cms-page" {{#compare params.query.type "===" "scvo-cms-page"}}selected{{/compare}}>Pages</option>
+                                <option value="scvo-member" {{#compare params.query.type "===" "scvo-member"}}selected{{/compare}}>SCVO member organisations</option>
+                                <option value="scvo-event" {{#compare params.query.type "===" "scvo-event"}}selected{{/compare}}>Training &amp; events</option>
+                            </select>
+                        </div>
+                        <!-- <button class="mdc-button mdc-button--raised" type="submit">
+                            Search
+                        </button> -->
+                    </form>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content">
+                    {{#each primaryResponse.hits.hits}}
                     {{#if _source.rendered.scvo_search_result}}
                     {{{_source.rendered.scvo_search_result}}}
                     {{else}}
                     [ Error - search result template missing ]
                     {{/if}}
+                    {{/each}}
                 </div>
-                {{/each}}
             </div>
         </div>
         {{> pagination}}
